añadiendo funciones en css, no en javascript

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
         <div class="keys">
             <div class="linea">
+                <input type="button" value="√" class="operator" />
+                <input type="button" value="%" class="operator" />
+                <input type="button" value="+/-" class="operator" />
+                <input type="button" value="M" class="operator" />
+            </div>
+            <div class="linea">
                 <input type="button" value="7" class="btn" />
                 <input type="button" value="8" class="btn" />
                 <input type="button" value="9" class="btn" />
@@ -26,7 +32,7 @@
                 <input type="button" value="4" class="btn"/>
                 <input type="button" value="5" class="btn"/>
                 <input type="button" value="6" class="btn"/>
-                <input type="button" value="*" class="operator" />
+                <input type="button" value="x" class="operator" />
             </div>
 
             <div class="linea">
