--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         <div class="keys">
             <div class="linea">
-                <input type="button" value="√" class="operator" />
-                <input type="button" value="%" class="operator" />
-                <input type="button" value="+/-" class="operator" />
                 <input type="button" value="M" class="operator" />
+                <input type="button" value="MR" class="operator" />
+                <input type="button" value="+/-" class="operator" />
+                <input type="button" value="√" class="operator" />
             </div>
             <div class="linea">
                 <input type="button" value="7" class="btn" />
@@ -32,7 +32,7 @@
                 <input type="button" value="4" class="btn"/>
                 <input type="button" value="5" class="btn"/>
                 <input type="button" value="6" class="btn"/>
-                <input type="button" value="x" class="operator" />
+                <input type="button" value="*" class="operator" />
             </div>
 
             <div class="linea">
