repaso de comentarios, Sustituir eval() por función calcular

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--Solo lo modifique un poco para dejar las lineas como yo queria que se vieran
+en pantalla, por entenderlo yo mejor, añadi la clase "linea" a los DIV
+al final no la utilice, pero como no influyen lo deje tal cual.
+Añadi la nueva linea de comandos nuevos que agregue fue el unico cambio real-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
